# di_os_2023-24

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  di_os_2023_24.cbp  script.sh  scriptfile
.cmake/api/v1/reply/: cache-v2-977e45478231cab92594.json  cmakeFiles-v1-f7375973c71858032957.json  codemodel-v2-bb202ab6357fc86125be.json  index-2023-11-22T12-33-41-0863.json  target-di_os_2023_24-Debug-2753f6a07f12098e5fe6.json
erg1/: github repo.txt  projects-ls  script.sh
erg1/projects/: house3
erg2/: Makefile  main.c  mycp  mycp.c  mycp.h  script.sh
erg3/: Makefile  helper  input.txt  main.c
erg4/: Makefile  dont_send_this.c  main.c  output.txt  process
